--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,13 @@ cache:
   directories:
   - $HOME/.m2
 
+language: java
+
+script: "mvn cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 deploy:
 - provider: releases
   api_key: "$GITHUB_OAUTH_TOKEN"
