--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ script: "mvn cobertura:cobertura"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - mvn sonar:sonar -Dsonar.organization=$SONARQUBE_ORGANIZATION   -Dsonar.host.url=https://sonarcloud.io   -Dsonar.login=$SONARQUBE_TOKEN
+
 
 deploy:
 - provider: releases
