--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ deploy:
   name: $TRAVIS_TAG
   on:
     tags: true
-    condition: $TRAVIS_TAG =~ ^robots-[0-9].[0-9]$
+    condition: $TRAVIS_TAG =~ ^java-tooling-template-(([0-9]).)+([0-9]+$)
 
 - provider: releases
   api_key: "$GITHUB_OAUTH_TOKEN"
@@ -42,4 +42,4 @@ deploy:
   prerelease: true
   on:
     tags: true
-    condition: $TRAVIS_TAG =~ ^robots-.*(beta|alpha|pre).*$
+    condition: $TRAVIS_TAG =~ ^java-tooling-template-.*(beta|alpha|pre).*$
