--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 
+env:
+  - OUTPUT_DIR=target ARTIFACT_NAME=java-tooling-template ARTIFACT_EXTENSION=.jar
+
 install:
 - mvn clean install -DskipTests -Dmaven.javadoc.skip=true -B -V
 
@@ -9,7 +12,7 @@ script:
 - mvn test -B
 
 before_deploy:
-- tar -zcf $TRAVIS_BUILD_DIR/$OUTPUT_DIR/$TRAVIS_TAG.tar.gz -C $TRAVIS_BUILD_DIR/$OUTPUT_DIR $(find $TRAVIS_BUILD_DIR/$OUTPUT_DIR/ -maxdepth 1 -name java-tooling-template-*.jar -printf "%f\n")
+- tar -zcf $TRAVIS_BUILD_DIR/$OUTPUT_DIR/$TRAVIS_TAG.tar.gz -C $TRAVIS_BUILD_DIR/$OUTPUT_DIR $(find $TRAVIS_BUILD_DIR/$OUTPUT_DIR/ -maxdepth 1 -name $ARTIFACT_NAME-*$ARTIFACT_EXTENSION -printf "%f\n")
 
 cache:
   directories:
@@ -20,8 +23,8 @@ language: java
 script: "mvn cobertura:cobertura"
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
-  - mvn sonar:sonar -Dsonar.organization=$SONARQUBE_ORGANIZATION -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONARQUBE_TOKEN
+- bash <(curl -s https://codecov.io/bash)
+- mvn sonar:sonar -Dsonar.organization=$SONARQUBE_ORGANIZATION -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONARQUBE_TOKEN
 
 
 deploy:
@@ -32,7 +35,7 @@ deploy:
   name: $TRAVIS_TAG
   on:
     tags: true
-    condition: $TRAVIS_TAG =~ ^java-tooling-template-(([0-9]).)+([0-9]+$)
+    condition: $TRAVIS_TAG =~ ^$ARTIFACT_NAME-(([0-9]).)+([0-9]+$)
 
 - provider: releases
   api_key: "$GITHUB_OAUTH_TOKEN"
@@ -42,4 +45,4 @@ deploy:
   prerelease: true
   on:
     tags: true
-    condition: $TRAVIS_TAG =~ ^java-tooling-template-.*(beta|alpha|pre).*$
+    condition: $TRAVIS_TAG =~ ^$ARTIFACT_NAME-.*(beta|alpha|pre).*$
