--- a/pom.xml
+++ b/pom.xml
@@ -1,87 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.com.miguelmf</groupId>
-    <artifactId>java-tooling-template</artifactId>
-    <version>1.5-SNAPSHOT</version>
-    <packaging>jar</packaging>
+  <groupId>br.com.miguelfontes</groupId>
+  <artifactId>java-tooling-template-archetype</artifactId>
+  <version>1.5-SNAPSHOT</version>
+  <packaging>maven-archetype</packaging>
 
-    <name>java-tooling-template</name>
-    <url>http://maven.apache.org</url>
-    <description>JUnit 5 + Travis + Sonarqube</description>
+  <name>java-tooling-template-archetype</name>
+  <url>https://github.com/Miguel-Fontes/java-tooling-template</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+  <build>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.archetype</groupId>
+        <artifactId>archetype-packaging</artifactId>
+        <version>3.0.1</version>
+      </extension>
+    </extensions>
 
-    <scm>
-        <connection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</connection>
-        <url>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</url>
-        <developerConnection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-archetype-plugin</artifactId>
+          <version>3.0.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
-    <distributionManagement>
-        <repository>
-            <id>internal.repo</id>
-            <name>Staging Repository</name>
-            <url>file://${project.build.directory}/mvn-repo</url>
-        </repository>
-    </distributionManagement>
+  <description>Java Tooling Template Archetype</description>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.9.5</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.2.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.2.0</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <formats>
-                       <format>html</format>
-                       <format>xml</format>
-                   </formats>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.2.0</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+  <scm>
+    <connection>scm:git:git@github.com:${githubUser}/${project.artifactId}.git</connection>
+    <url>scm:git:git@github.com:${githubUser}/${project.artifactId}.git</url>
+    <developerConnection>scm:git:git@github.com:${githubUser}/${project.artifactId}.git</developerConnection>
+  </scm>
 </project>
