--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>br.com.miguelfontes</groupId>
@@ -7,7 +8,8 @@
   <version>1.5-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
-  <name>java-tooling-template-archetype</name>
+  <name>Java Tooling Template Archetype</name>
+  <description>A quickstart archetype with Travis, JUnit 5, Jacoco, Codecov and Sonarcloud pre-configured from the box!</description>
   <url>https://github.com/Miguel-Fontes/java-tooling-template</url>
 
   <build>
@@ -19,6 +21,21 @@
       </extension>
     </extensions>
 
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.scm</groupId>
+            <artifactId>maven-scm-provider-gitexe</artifactId>
+            <version>1.9.5</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -29,11 +46,11 @@
     </pluginManagement>
   </build>
 
-  <description>Java Tooling Template Archetype</description>
-
   <scm>
-    <connection>scm:git:git@github.com:${githubUser}/${project.artifactId}.git</connection>
-    <url>scm:git:git@github.com:${githubUser}/${project.artifactId}.git</url>
-    <developerConnection>scm:git:git@github.com:${githubUser}/${project.artifactId}.git</developerConnection>
+    <connection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</connection>
+    <url>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</url>
+    <developerConnection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</developerConnection>
   </scm>
+
+
 </project>
