Script de configuração e mudança no formato de tags

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
             <version>1.9.5</version>
           </dependency>
         </dependencies>
+        <configuration>
+          <tagNameFormat>@{project.version}</tagNameFormat>
+        </configuration>
       </plugin>
     </plugins>
 
