--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>br.com.miguelfontes</groupId>
   <artifactId>java-tooling-template-archetype</artifactId>
-  <version>1.5-SNAPSHOT</version>
+  <version>1.5</version>
   <packaging>maven-archetype</packaging>
 
   <name>Java Tooling Template Archetype</name>
@@ -61,6 +60,7 @@
     <connection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</connection>
     <url>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</url>
     <developerConnection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</developerConnection>
+    <tag>1.5</tag>
   </scm>
 
 </project>
