Fix no Regex da versão beta do travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,4 @@ deploy:
   prerelease: true
   on:
     tags: true
-    condition: $TRAVIS_TAG =~ ^$*-*(beta|alpha|pre).*$
+    condition: $TRAVIS_TAG =~ ^.*-(beta|alpha|pre).*$
