--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ deploy:
   api_key: "$GITHUB_OAUTH_TOKEN"
   file: "$TRAVIS_BUILD_DIR/$OUTPUT_DIR/$ARTIFACT_NAME-$TRAVIS_TAG.tar.gz"
   skip_cleanup: true
-  name: "Release $ARTIFACT_NAME-$TRAVIS_TAG"
+  name: "Release $TRAVIS_TAG"
   on:
     tags: true
     condition: $TRAVIS_TAG =~ ^(([0-9]).)+([0-9]+$)
@@ -32,7 +32,7 @@ deploy:
   api_key: "$GITHUB_OAUTH_TOKEN"
   file: "$TRAVIS_BUILD_DIR/$OUTPUT_DIR/$ARTIFACT_NAME-$TRAVIS_TAG.tar.gz"
   skip_cleanup: true
-  name: "Pre-Release $ARTIFACT_NAME-$TRAVIS_TAG"
+  name: "Pre-Release $TRAVIS_TAG"
   prerelease: true
   on:
     tags: true
