--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>br.com.miguelfontes</groupId>
   <artifactId>java-tooling-template-archetype</artifactId>
-  <version>1.8</version>
+  <version>1.9-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
   <name>Java Tooling Template Archetype</name>
@@ -138,7 +138,7 @@
     <connection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</connection>
     <url>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</url>
     <developerConnection>scm:git:git@github.com:Miguel-Fontes/java-tooling-template.git</developerConnection>
-    <tag>1.8</tag>
+    <tag>HEAD</tag>
   </scm>
 
 </project>
