Fixes missing maven-release-plugin configuration

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
         </dependencies>
         <configuration>
           <tagNameFormat>@{project.version}</tagNameFormat>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <useReleaseProfile>false</useReleaseProfile>
+          <releaseProfiles>release</releaseProfiles>
+          <goals>deploy</goals>
         </configuration>
       </plugin>
       <plugin>
